--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "19.1.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
